crates/dioform/tests/derive_contract/fail/field_group_tuple_struct.rs
#![allow(dead_code)]

use dioform::FieldGroup;

#[derive(FieldGroup)]
struct TupleGroup(String);

fn main() {}
